# AQL

./: README.md  __init__.py  plugin.yaml  pyproject.toml  schemas.py  tools.py
aql_rubicon/: __init__.py  ast.py  executor.py  parser.py  predicate.py  state.py  wrappers.py
data/demo/: university.sql
data/demo/lab/: events.json  newsletters.json  people.json  projects.json
skills/aql-rubicon/: SKILL.md
tests/: test_executor.py  test_parser.py  test_plugin_registration.py  test_predicate.py
